      sparse sampling of spaces.
    - Add :class:`~mvpa2.clfs.transerror.ConfusionMatrixError` to compute
      confusion matrices with a error function interface (e.g. for
      CrossValidation(errorfx=...). This class existed for a long time, but
      was hidden in the unit tests.
    - Add :class:`~mvpa2.mappers.fxy.FxyMapper` to perform arbitrary
      computations involving two datasets.

* 2.0.0 (Mon, Dec 19 2011)

  This release aggregates all the changes occurred between official
  releases in 0.4 series and various snapshot releases (in 0.5 and 0.6
  series).  To get better overview of high level changes see
  :ref:`release notes for 0.5 <chap_release_notes_0.5>` and :ref:`0.6
  <chap_release_notes_0.6>` as well as summaries of release candidates
  below

  * Fixes (23 BF commits)

    - significance level in the right tail was fixed to include the
      value tested -- otherwise resulted in optimistic bias (or
      absurdly high significance in improbable case if all estimates
      having the same value)
    - compatible with the upcoming IPython 0.12 and renamed sklearn
      (Fixes #57)
    - do not double-train ``slave`` classifiers while assessing
      sensitivities (Fixes #53)

  * Enhancements (30 ENH + 3 NF commits)

    - resolving voting ties in kNN based on mean distance, and
      randomly in SMLR
    - :class:`kNN`\'s ``ca.estimates`` now contains dictionaries with
      votes for each class
    - consistent zscoring in :class:`Hyperalignment`

* 2.0.0~rc5 (Wed, Oct 19 2011)

  * **Major**: to allow easy co-existence of stable PyMVPA 0.4.x, 0.6
    development ``mvpa`` module was renamed into mod:`mvpa2`.

  * Fixes

    - compatible with the new Shogun 1.x series
    - compatible with the new h5py 2.x series
    - mvpa-prep-fmri -- various compatibility fixes and smoke testing
    - deepcopying :class:`SummaryStatistics` during __add__

  * Enhancements

    - tutorial uses :mod:`mvpa2.tutorial_suite` now